<resources>
    <string name="app_name">IG2Work</string>

    <string-array name="role_array">
        <item>Votre rôle</item>
        <item>Enseignant</item>
        <item>Etudiant</item>
    </string-array>
    <string name="ROLE_EMPTY">Votre rôle</string>
    <string name="PROMO_EMPTY">Sélectionner votre promo</string>
    <string name="TD_EMPTY">Sélectionner votre groupe TD</string>
    <string name="TP_EMPTY">Sélectionner votre groupe TP</string>

    <!-- Variable globlal -->
    <string name="ROLE">user_role</string>
    <string name="USER_NAME">user_name</string>
    <string name="EMAIL">user_email</string>
    <string name="connect">connection</string>
    <string name="inscription">Inscription</string>
    <string name="logout">Se déconnecter</string>
    <string name="exit">Fermer</string>

    <string name="error_field_required">Le champs est obligatoire</string>
    <string name="error_confirmation_password">Les mot de passe ne sont pas identique</string>
    <string name="error_champ">Ce champ semble incorrect</string>
    <string name="password">Mot de Passe</string>
    <string name="firstname">Prenom</string>
    <string name="lastname">Nom</string>
    <string name="confirmer_le_mot_de_passe">Confirmer le mot de passe</string>
    <string name="error_role_required">Veuillez renseignez votre rôle</string>
    <string name="promo">Promo :</string>
    <string name="td">TD :</string>
    <string name="tp">TP :</string>

    <string name="filter1">Aujourd\'hui</string>
    <string name="filter2">7 prochains jours</string>
    <string name="filter3">Ce mois-ci</string>

    <string name="seances">Séances</string>
    <string name="homeworks">Devoirs</string>

    <string name="menu_create">Nouveau</string>
    <string name="menu_edit">Éditer</string>
    <string name="menu_delete">Supprimer</string>
    <string name="menu_search">Rechercher</string>
    <string name="menu_seance">Séance</string>
    <string name="titre">Titre</string>
    <string name="description_de_la_t_che">Description de la tâche</string>
    <string name="intitul_de_la_question">Intitulé de la question</string>
    <string name="entrez_votre_note_personnel_ici">Entrez votre note personnel ici</string>
    <string name="question_eleve">Questions des élèves</string>
    <string name="menu_question">Poser une question</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="ajouter_votre_r_ponse">Ajouter votre réponse ...</string>
    <string name="correction">Correction</string>
    <string name="r_ponses_des_l_ves">Réponses des élèves :</string>
    <string name="tat_du_devoir">État du devoir</string>
    <string name="votre_r_ponse">Votre Réponse</string>

    <string-array name="seance_types">
        <item>Cours</item>
        <item>TD</item>
        <item>TP</item>
    </string-array>

    <string name="account">Mon Compte</string>
    <string name="ok">OK</string>
    <string name="oldPassword">Ancien mot de passe</string>
    <string name="newPassword">Nouveau mot de passe</string>
    <string name="newPassword2">Confirmer mot de passe</string>
</resources>
