<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.anais.ig2work.TaskActivity"
    android:orientation="vertical">

    <TextView
                android:text="@string/titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:id="@+id/textView" />
            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:text="@string/description_de_la_t_che"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:id="@+id/textView2" />
            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:inputType="textMultiLine"
                android:layout_marginBottom="15dp"/>

            <TextView
                android:text="@string/question_eleve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="@android:color/black"
                android:id="@+id/textView3" />
            <ListView
                android:id="@+id/questions"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="15dp" />

</LinearLayout>
